@@ -1,5 +1,5 @@
 ;; -*- mode: emacs-lisp; auto-compile-lisp: nil; -*-
-;; Time-stamp: <19/06/2004 18:35:38 Yann Hodique>
+;; Time-stamp: <19/06/2004 19:00:33 Yann Hodique>
 
 ;; Use this one instead of require to ignore errors
 (defun request (pack)
@@ -157,12 +157,24 @@
 (add-hook 'ediff-after-setup-windows-hook 'my-ediff-ash)
 (add-hook 'ediff-quit-hook 'my-ediff-qh)
 
+(defun yh-project-changelog-file ()
+  (let ((rep (file-name-directory (buffer-file-name))))
+    (cond ((string-match (expand-file-name "~/cvs/dotemacs") rep)
+           (expand-file-name "~/cvs/dotemacs/ChangeLog"))
+          ((string-match (expand-file-name "~/Projects/bassist") rep)
+           (expand-file-name "~/Projects/bassist/ChangeLog"))
+          ((string-match (expand-file-name "~/Projects/qnet") rep)
+           (expand-file-name "~/Projects/qnet/ChangeLog"))
+          (t nil))
+    ))
+
 (defun ediff-add-changelog  (&optional key)
   (interactive)
   (with-current-buffer
       (ediff-get-buffer
        (ediff-char-to-buftype (or key last-command-char)))
-    (add-change-log-entry-other-window)))
+    (let ((change-log-default-name (yh-project-changelog-file)))
+      (add-change-log-entry-other-window))))
 
 (add-hook 'ediff-keymap-setup-hook (lambda ()
                                      (define-key ediff-mode-map "Ca" 'ediff-add-changelog)
